src/tests/integer_infix_boolean_expression/snapshots/monkey_interpreter__tests__integer_infix_boolean_expression__test_integer_infix_boolean_expression_case_6_lexical_analysis.snap
---
source: src/tests/integer_infix_boolean_expression/mod.rs
assertion_line: 24
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 11,
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Equals,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 19,
        },
        position: Position {
            line: 1,
            column: 7,
        },
    },
]
