src/tests/integer_infix_boolean_expression/snapshots/monkey_interpreter__tests__integer_infix_boolean_expression__test_integer_infix_boolean_expression_case_8_lexical_analysis.snap
---
source: src/tests/integer_infix_boolean_expression/mod.rs
assertion_line: 24
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 7,
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: NotEquals,
        position: Position {
            line: 1,
            column: 3,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 7,
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
]
